fix(colors): Contrast for project/tag selection
Closes #1813

--- a/src/styles/colours.css
+++ b/src/styles/colours.css
@@ -15,6 +15,16 @@
   --pink: #DD6FD1;
   --light-pink: #E57CD8;
 
+  --pink-20: #FAE5F7;
+  --pink-30: #F7D8F3;
+
   --dark-purple: #412a4c;
   --darker-purple: #0a040c;
+  --dark-purple-10: #EAE7EB;
+  --dark-purple-20: #D5D0D7;
+  --dark-purple-60: #817187;
+  --dark-purple-70: #6b5a74;
+  --dark-purple-80: #564260;
+
+  --peach: #fefbfa;
 }
